--- a/evivah/src/Components/Navbar/NavbarStyles.css
+++ b/evivah/src/Components/Navbar/NavbarStyles.css
@@ -1,7 +1,8 @@
 header {
     width: 100%;
     height: 70px;
-    background-color: seagreen;
+  color: #000;
+    background-color: #fff;
 }
 
 header .navbar {
@@ -21,9 +22,8 @@ header .logo {
 }
 
 header .logo img {
-    width:180px; 
-    height: auto;
-    color: crimson;
+    width:103px;
+    margin-top: 9px; 
 }
 
 .hamburger {
@@ -37,6 +37,7 @@ header .logo img {
     display: flex;
     align-items: center;
     justify-self: start;
+    margin-bottom: 0px;
 }
 
 .nav-item {
@@ -44,7 +45,8 @@ header .logo img {
 }
 
 .navbar-link {
-    color: #fff;
+    color: #000;
+    font-size: 22px;
 }
 
 @media screen and (max-width:960px) {
