--- a/evivah/src/Components/SinglePost/singlePost.css
+++ b/evivah/src/Components/SinglePost/singlePost.css
@@ -1,13 +1,10 @@
-
-
 .singlePostIcon{
     margin-left: 10px;
     cursor: pointer;
 }
 .singlePostDate{
-    text-transform: uppercase;
     font-size: 16px;
-    font-weight: 700;
+    font-weight: 400;
 }
 
 .singlePostEdit{
@@ -16,17 +13,31 @@
 }
 
 .singlePostTitle{
-    text-align: center;
-    margin: 10px;
-    font-family: 'Lora', serif;
-    font-size: 2rem;
+    padding-bottom: 10px;
+    font-size: 50px;
 }
+.blog-author-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.blog-author-content .blog-author-img{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
+.blog-author-content .blog-author-info{
+    display: flex;
+    flex-direction: column;
+    margin-left: 15px;
+}
+
 
 .singlePostWrapper .single-blog-top{
     display: flex;
     flex-direction: row-reverse;
-    background-color: #666;
-    padding: 2rem ;
+    background-color: #eff3f2;
+    padding: 16px 30px;
 }
 .singlePostWrapper .single-blog-top .single-blog-top-img{
     display: flex;
@@ -34,8 +45,17 @@
     height: 60vh;
     padding: 1rem 32px 1rem 1rem;
     object-fit: fill;
+    flex: 2;
 }
 
+
+.singlePostWrapper .single-blog-top .single-blog-top-content{
+    display: flex;
+    flex: 2;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
 .singlePostImg{
     width: 100%;
     height: 361px;
@@ -50,6 +70,7 @@
     line-height: 25px;
     width:70%;
     margin:10px auto;
+    margin-bottom: 30px;
 }
 
 .singlePostDesc::first-letter{
@@ -72,6 +93,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-size: 16px;
-    color: #b39656;
+    font-size: 18px;
+    color: #000;
 }
