--- a/evivah/src/index.css
+++ b/evivah/src/index.css
@@ -25,7 +25,6 @@ ul {
 
 a {
   text-decoration: none!important;
-  color: #fff!important;
 }
 
 .primary-color {
@@ -46,7 +45,7 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+/* button:hover {
   border: 1px solid var(--secondary);
   background-color: var(--secondary);
-}
+} */
