--- a/evivah/src/Components/Post/post.css
+++ b/evivah/src/Components/Post/post.css
@@ -3,9 +3,9 @@
     margin: 10px 25px 40px 25px;
 }
 
-.post .post-img{
+ .post-img{
     width: 100%;
-    height: 350px;
+    height: 175px;
     object-fit: cover;
     border-radius: 7px;    
 }
