--- a/evivah/src/Components/Login/login.css
+++ b/evivah/src/Components/Login/login.css
@@ -96,6 +96,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #eff3f2;
 }
 
 .wrapper {
@@ -107,6 +108,7 @@
   display: flex;
   align-items: center;
   border-radius: 20px;
+  background-color: #fff;
 }
 
 
@@ -194,7 +196,7 @@
 .loginTitle{
   position: absolute;
   top: 80px;
-  color:lightgray
+  color:#696868;
 }
 
 .link{
