--- a/evivah/src/Components/Login/login.css
+++ b/evivah/src/Components/Login/login.css
@@ -31,14 +31,14 @@
   flex-wrap: wrap;
 }
 
-.card {
+/* .card {
   width: 30%;
   padding: 10px;
   border-radius: 20px;
   -webkit-box-shadow: 0px 5px 33px -21px rgba(66, 68, 90, 1);
   -moz-box-shadow: 0px 5px 33px -21px rgba(66, 68, 90, 1);
   box-shadow: 0px 5px 33px -21px rgba(66, 68, 90, 1);
-}
+} */
 
 .img {
   width: 100%;
