Frontend:Planner and Vendor Flow Completed

--- a/evivah/src/Components/MasterServices/style.css
+++ b/evivah/src/Components/MasterServices/style.css
@@ -16,7 +16,7 @@
 .overflow{
     overflow: hidden;
 }
-.card-title{
+.service-card-title{
     margin-bottom: 0!important;
     background: #454545;
     color: #fff;
