--- a/evivah/src/Components/Footer/style.css
+++ b/evivah/src/Components/Footer/style.css
@@ -12,7 +12,7 @@
     grid-template-columns: 1fr 2fr 1fr 1fr;
 }
 
-.footer h6,p {
+.footer h6, .footer p {
     color: var(--grey);
     font-size: 14px;
     padding: .4rem 0;
