--- a/evivah/src/Pages/AdminDashBoardPages/Product/Product.css
+++ b/evivah/src/Pages/AdminDashBoardPages/Product/Product.css
@@ -19,6 +19,7 @@
     cursor: pointer;
 }
 .product-top{
+    padding-top: 20px;
     display: flex;
 }
 .product-top-left{
@@ -27,6 +28,7 @@
 .product-top-rigth{
     flex: 1;
     padding: 20px;
+    padding-top: 8px;
     margin: 20px;
     -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
@@ -46,17 +48,19 @@
     display: flex;
     align-items: center;
 }
-.product-info-bottom{
+/* .product-info-bottom{
     margin-top: 10px;
-}
+} */
 .product-info-item{
-    width: 150px;
+    /* width: 150px; */
     display: flex;
-    justify-content: space-between;
+    padding-bottom: 5px;
+    /* justify-content: space-between; */
 }
 
 .product-info-value{
     font-weight: 300;
+    padding-left: 15px;
 }
 .product-bottom{
     padding: 20px;
